<resources>
    <string name="app_name">M&amp;R CLARA – Timekeeping</string>
    <string name="time_ticket_summary">Time Ticket Summary</string>
    <string name="time_ticket_new">Time Ticket - New</string>
    <string name="time_ticket_edit">Time Ticket - Edit</string>
    <string name="time_ticket_copy">Time Ticket - Copy</string>
    <string name="time_ticket_search">Time Ticket - Search</string>
    <string name="back">Back</string>
    <string name="matter_id">Matter ID</string>
    <string name="time_keeper_code">Time Keeper Code</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="reset">Reset</string>
    <string name="execute">Execute</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="verify_otp_header">We have sent verification code to</string>
    <string name="phone">Phone</string>
    <string name="user_id_password_empty_message">Please enter valid User id and Password</string>
    <string name="user_id_empty_message">Please enter User id</string>
    <string name="password_empty_message">Please enter Password</string>
    <string name="user_id_valid_message">Please enter valid User id</string>
    <string name="password_valid_message">Please enter valid Password</string>
    <string name="no_network">Please check your network connect</string>
    <string name="api_failure_message">Sorry something went wrong!. Please retry again.</string>
    <string name="otp_empty_message">Please enter OTP</string>
    <string name="otp_valid_message">Please enter valid OTP</string>
    <string name="text_new">New</string>
    <string name="search">Search</string>
    <string name="time_ticket">Time Ticket</string>
    <string name="time_ticket_date">Time Ticket Date</string>
    <string name="client_name">Client Name</string>
    <string name="matter_name">Matter Name</string>
    <string name="booked_hours">Booked Hours</string>
    <string name="booked_amount">Booked Amount</string>
    <string name="bill_type">Bill Type</string>
    <string name="task_code">Task Code</string>
    <string name="activity_code">Activity Code</string>
    <string name="description">Description*</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="matter_number_empty_message">Please select Matter Number</string>
    <string name="timekeeper_code_empty_message">Please select Timekeeper Code</string>
    <string name="bill_type_empty_message">Please select Bill Type</string>
    <string name="date_empty_message">Please select Date</string>
    <string name="status_id_empty_message">Please select Status Id</string>
    <string name="activity_code_empty_message">Please select Activity Code</string>
    <string name="task_based_code_empty_message">Please select Task Based Code</string>
    <string name="client_name_empty_message">Please select Client Name</string>
    <string name="timer_empty_message">Please select Timer</string>
    <string name="stop_timer_message">Please stop the Timer</string>
    <string name="booked_hours_empty_message">Please select Booked Hours</string>
    <string name="assigned_rate_hours_empty_message">Please select Assigned Rate/Hours</string>
    <string name="default_rate_hour_empty_message">Please select Default Rate/Hour</string>
    <string name="time_ticket_amount_empty_message">Please select Time Ticket Amount</string>
    <string name="description_empty_message">Please select Description</string>
    <string name="action_logout">LogOut</string>
    <string name="action_notification">Notification</string>
    <string name="otp_success_message">OTP Sent Successfully</string>
    <string name="matter_no">Matter No</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_empty_result_message">Result not found</string>
    <string name="all_matters">All Matters</string>
    <string name="assigned_rate_hour">Assigned Rate/Hour</string>
    <string name="default_rate_hour">Default Rate/Hour</string>
    <string name="time_ticket_amount">Time Ticket Amount</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="timer">Timer</string>
    <string name="timer_zero">00:00:00</string>
    <string name="enter">Enter</string>
    <string name="task_based_code">Task Based Code</string>
    <string name="delete_success_message">Record deleted successfully</string>
    <string name="select_date">Select date</string>
    <string name="select_dates">Select dates</string>
    <string name="booked_hour">0.0</string>
    <string name="ticket_save_success_message">Ticket saved successfully</string>
    <string name="delete_error_message">Time Ticket can\'t be deleted</string>
    <string name="confirm">Confirm</string>
    <string name="tablet">Tablet</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this entry?</string>
    <string name="no_record_found">No record found</string>
    <string name="notification">Notifications</string>
    <string name="notification_channel_id" translatable="false">clara_timekeeping_channel</string>
    <string name="notification_channel_name" translatable="true">clara timekeeping</string>
    <string name="notification_denied_message">Permission was denied. The app will not show notifications.</string>
</resources>